Added darkmode function

--- a/extension_menu/index.html
+++ b/extension_menu/index.html
@@ -1,12 +1,16 @@
 <html>
 <head>
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="menu.js" rel="script"></script>
+    <script type="module" src="QISModifier.js" rel="script"></script>
+    <script type="module" src="darkmodeModifier.js" rel="script"></script>
 </head>
 <body>
 <h1>QIS Helper</h1>
-<label for="checkboxEnabler">
-    <input type="checkbox" id="checkboxEnabler" name="enabled"><span id="checkboxText">Extension is disabled</span>
+<label for="QISModifierEnabler">
+    <input type="checkbox" id="QISModifierEnabler" name="enabled"><span id="QISModifierText">Modified QIS view disabled.</span>
+</label>
+<label for="darkmodeEnabler">
+    <input type="checkbox" id="darkmodeEnabler" name="enabled"><span id="checkboxText">QIS Darkmode is disabled.</span>
 </label>
 </body>
 </html>
