Fix wrong checkbox modifier

--- a/extension_menu/index.html
+++ b/extension_menu/index.html
@@ -10,7 +10,7 @@
     <input type="checkbox" id="QISModifierEnabler" name="enabled"><span id="QISModifierText">Modified QIS view disabled.</span>
 </label>
 <label for="darkmodeEnabler">
-    <input type="checkbox" id="darkmodeEnabler" name="enabled"><span id="checkboxText">QIS Darkmode is disabled.</span>
+    <input type="checkbox" id="darkmodeEnabler" name="enabled"><span id="darkmodeModifierText">QIS Darkmode is disabled.</span>
 </label>
 </body>
 </html>
