Note on end of support added

--- a/extension_menu/index.html
+++ b/extension_menu/index.html
@@ -1,4 +1,4 @@
-<html>
+<!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="QISModifier.js" rel="script"></script>
